libop_lib = shared_library('op',
  'unix.c',
  'iocp.c',
  'crypt.c',
  'arena.c',
  'shm_ring.c',
  'simd_scan.c',
  'balloc.c',
  'commio.c',
  have_ssl ? 'wolfssl.c' : 'wolfssl_nossl.c',
  'websocket.c',
  'sha1.c',
  'event.c',
  'op_lib.c',
  'op_memory.c',
  'linebuf.c',
  'sendbuf.c',
  'tools.c',
  'helper.c',
  'devpoll.c',
  'epoll.c',
  'io_uring.c',
  'poll.c',
  'ports.c',
  'sigio.c',
  'select.c',
  'kqueue.c',
  'rawbuf.c',
  'htab.c',
  'strbuf.c',
  'toml.c',
  'seccomp.c',
  'arc4random.c',
  'bloom.c',
  'utf8.c',
  'lru.c',
  'pqueue.c',
  'vec.c',
  'async_log.c',
  'async.c',
  'str_intern.c',
  'rbt.c',
  'cidr_tbl.c',
  'deque.c',
  'itree.c',
  'trie.c',
  'skiplist.c',
  'graph.c',
  'hll.c',
  'wm.c',
  'coro.c',
  'thread_pool.c',
  'lock_debug.c',
  'version.c',
  dependencies: [librt_dep, have_ssl ? wolfssl_dep : [], liburing_dep, win32_socket_dep,
                 meson.get_compiler('c').find_library('m', required: true),
                 dependency('threads')],
  install: true,
  include_directories: [libop_inc]
)
